# aevum

./: Cargo.toml  README.md  docker-compose.yml
crates/aevum-api/: Cargo.toml
crates/aevum-api/src/: lib.rs  main.rs  repository.rs  server.rs
crates/aevum-api/src/handlers/: data.rs  streams.rs
crates/aevum-common/: Cargo.toml
crates/aevum-common/src/: error.rs  lib.rs
crates/aevum-ingestion/: Cargo.toml
crates/aevum-ingestion/src/: config.rs  lib.rs  main.rs  server.rs  validation.rs
crates/aevum-ingestion/src/handlers/: ingest.rs  streams.rs
crates/aevum-processor/: Cargo.toml
crates/aevum-processor/src/: lib.rs  operations.rs
crates/aevum-storage/: Cargo.toml
crates/aevum-storage/src/: config.rs  lib.rs
crates/aevum_api/: Cargo.toml
crates/aevum_api/src/: config.rs
crates/aevum_api/src/handlers/: health.rs  mod.rs
crates/aevum_common/: Cargo.toml
crates/aevum_common/src/: models.rs  utils.rs
crates/aevum_ingestion/: Cargo.toml  Dockerfile
crates/aevum_ingestion/src/: config.rs  main.rs  producer.rs  server.rs
crates/aevum_ingestion/src/handlers/: health.rs  ingest.rs  mod.rs  streams.rs
crates/aevum_processor/: Cargo.toml
crates/aevum_processor/src/: config.rs  consumer.rs  main.rs  pipeline.rs  processor.rs
crates/aevum_storage/: Cargo.toml
crates/aevum_storage/src/: consumer.rs  main.rs  repository.rs
docker/: api.Dockerfile  ingestion.Dockerfile  processor.Dockerfile  storage.Dockerfile
docs/: overview.md
migrations/: 20240315000001_initial_schema.sql
