[package]
name = "aevum"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/aevum_common",
    "crates/aevum_ingestion",
    "crates/aevum_processor",
    "crates/aevum_storage",
    "crates/aevum_api",
]

[workspace.dependencies]
# Core
tokio = { version = "1.29", features = ["full"] }
async-trait = "0.1.73"
futures = "0.3.28"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "2.0.12"
anyhow = "1.0.75"

# HTTP and API
axum = { version = "0.8.1", features = ["macros"] }
actix-web = "4.4"
actix-cors = "0.7.1"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
hyper = "1.6.0"

# Database
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
] }
redis = { version = "0.29.1", features = ["tokio-comp"] }

# Streaming
rdkafka = { version = "0.37.0", features = ["cmake-build"] }

# Configuration
config = "0.15.11"
dotenv = "0.15.0"

# Utilities
chrono = { version = "0.4.26", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
bon = "3.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
actix-web-httpauth = "0.8.2"
