[package]
name = "aevum-api"
version = "0.1.0"
edition = "2024"

[dependencies]
aevum-common = { path = "../aevum-common" }

tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
sqlx = { workspace = true }
config = { workspace = true }
dotenv = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bon = { workspace = true }
