[package]
name = "aevum-ingestion"
version = "0.1.0"
edition = "2024"

[dependencies]
aevum-common = { path = "../aevum-common" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
rdkafka = { workspace = true }
config = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bon = { workspace = true }
