[package]
name = "aevum-processor"
version = "0.1.0"
edition = "2024"

[dependencies]
aevum-common = { path = "../aevum_common" }

tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rdkafka = { workspace = true }
config = { workspace = true }
dotenv = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
